# ruxno

./: CHECKLIST.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
benches/: dispatcher.rs  middleware.rs
examples/: 01_hello_world.rs
examples/01_hello_world/: Cargo.toml  README.md  request.http
examples/01_hello_world/src/: db.rs  env.rs  main.rs  util.rs
examples/01_hello_world/src/config/: env.rs  mod.rs
examples/01_hello_world/src/controllers/: admin_controller.rs  health_controller.rs  home_controller.rs  mod.rs  user_controller.rs
examples/01_hello_world/src/database/: mod.rs  user_repository.rs
examples/01_hello_world/src/middleware/: http_sniffer.rs  logging.rs  mod.rs
examples/01_hello_world/src/models/: mod.rs  user.rs
examples/01_hello_world/src/routes/: admin_routes.rs  api_routes.rs  health_routes.rs  mod.rs  user_routes.rs
examples/01_hello_world/src/services/: health_service.rs  mod.rs
examples/01_hello_world/src/views/: mod.rs
examples/02_middleware_patterns/: Cargo.toml  request.http
ruxno/: Cargo.toml  README.md
ruxno-html/: Cargo.toml  README.md
ruxno-html/src/: codegen.rs  lib.rs  parser.rs
ruxno-middleware/: Cargo.toml  README.md
ruxno-middleware/src/: auth.rs  compression.rs  cors.rs  health_check.rs  lib.rs  logger.rs  pretty_json.rs  rate_limit.rs  security_headers.rs
ruxno/benches/: routing.rs
ruxno/examples/: 02_middleware_patterns.rs
ruxno/src/: lib.rs  prelude.rs
ruxno/src/app/: builder.rs  mod.rs  registry.rs  route.rs
ruxno/src/body/: json.rs  limits.rs  mod.rs  stream.rs
ruxno/src/core/: handler.rs  middleware.rs  types.rs
ruxno/src/domain/: context.rs  request.rs  response.rs
ruxno/src/http/: body.rs  convert.rs  headers.rs
ruxno/src/pipeline/: chain.rs  dispatcher.rs  executor.rs  mod.rs  phase.rs
ruxno/src/routing/: matcher.rs  mod.rs
ruxno/src/server/: config.rs  listener.rs  mod.rs  service.rs
ruxno/src/upgrade/: detector.rs
ruxno/src/upgrade/sse/: event.rs  mod.rs  sender.rs  stream.rs
ruxno/src/upgrade/websocket/: frame.rs  socket.rs  upgrade.rs
src/app/: environment.rs  mod.rs  registry.rs  route.rs
src/body/: form.rs  json.rs  limits.rs  mod.rs  multipart.rs  parser.rs  stream.rs
src/core/: error.rs  handler.rs  middleware.rs  mod.rs  types.rs
src/domain/: context.rs  extensions.rs  mod.rs  request.rs  response.rs
src/http/: body.rs  convert.rs  headers.rs  mod.rs
src/pipeline/: chain.rs  dispatcher.rs  executor.rs  mod.rs
src/routing/: matcher.rs  params.rs  pattern.rs  tree.rs
src/server/: builder.rs  config.rs  listener.rs  mod.rs  service.rs  shutdown.rs
src/upgrade/: detector.rs  mod.rs
src/upgrade/sse/: event.rs  keep_alive.rs  sender.rs  stream.rs
src/upgrade/websocket/: broadcast.rs  frame.rs  message.rs  mod.rs  socket.rs  upgrade.rs
