[package]
name = "ruxno-clean"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Ruxno Contributors"]
license = "MIT OR Apache-2.0"
description = "A fast, ergonomic Rust web framework with clean architecture"
documentation = "https://docs.rs/ruxno-clean"
repository = "https://github.com/ruxno/ruxno"
keywords = ["web", "framework", "async", "http", "clean-architecture"]
categories = ["web-programming::http-server", "asynchronous"]

[dependencies]
# Core async runtime
tokio = { version = "1.52.1", features = ["full"] }

# HTTP server
hyper = { version = "1.9.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.20", features = [
    "tokio",
    "server",
    "server-auto",
] }
http = "1.4.0"
http-body = "1.0"
http-body-util = "0.1.3"

# Routing
matchit = "0.9.2"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"

# Utilities
bytes = "1.11.1"
thiserror = "2"
async-trait = "0.1"

# WebSocket support
hyper-tungstenite = "0.15"
tokio-tungstenite = "0.24"
sha1 = "0.11.0"
base64 = "0.22"

# SSE support
futures-util = "0.3.32"
async-stream = "0.3"

# Body parsing
serde_qs = "1.1.1"
urlencoding = "2.1"
serde_urlencoded = "0.7.1"

[dev-dependencies]
tokio-test = "0.4.5"
criterion = { version = "0.8.2", features = ["async_tokio", "html_reports"] }

[lib]
name = "ruxno"
path = "src/lib.rs"

[[bench]]
name = "routing"
harness = false

[[bench]]
name = "middleware"
harness = false

[[bench]]
name = "dispatcher"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
