[workspace]
resolver = "2"
members = ["ruxno", "ruxno-middleware", "examples/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ruxno Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/ruxno"
homepage = "https://github.com/yourusername/ruxno"
documentation = "https://docs.rs/ruxno"
keywords = ["web", "framework", "http", "async", "server"]
categories = ["web-programming::http-server", "asynchronous"]

[workspace.dependencies]
# Core dependencies
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1"
http-body-util = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"

# Middleware dependencies
governor = "0.6"
tower = "0.5"
tower-http = { version = "0.6", features = ["full"] }

# Utility dependencies
urlencoding = "2"
sha1 = "0.10"
base64 = "0.22"
rand = "0.10"
multer = "3.1"

# Testing dependencies
criterion = "0.5"

ruxno = { path = "./ruxno" }
ruxno-middleware = { path = "./ruxno-middleware", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
