[package]
name = "hello_world"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core framework
ruxno = { workspace = true }

# Middleware (with all features for examples)
ruxno-middleware = { workspace = true, features = ["rate-limit"] }

# Runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
